# factorio-check

./: .gitignore  README.md  TODO.md  action.yml  info.json
.github/workflows/: autoPublish.yml  docker-description.yml  docker.yml  docker_push.yml  lint.yml  main.yml  py-wheel.yml  pyrelease.yml  test_action.yml  update.yml
docker/: Dockerfile  Dockerfile.fbb-test  Dockerfile.luacheck  Dockerfile.mod-test  Dockerfile.scenario-test  docker-compose.yml  factorio-luacheck-generator.lua  input_luacheckrc  luarc.json  runme.sh
docker/files/: entrypoint.sh  lint-entrypoint.sh  luarc.json  server-settings.json
locale/en/: config.cfg
scripts/: upload.sh  zip_mod.sh
src/lua/factorio-check/: info.json  main.lua
src/lua/simple-mod/: README.md  control.lua  data.lua  info.json
src/lua/simple-mod/locale/en/: fire_armor.cfg
src/lua/simple-mod/moddata/: item.lua
src/lua/simple-mod/modsrc/: main.lua
src/lua/simple-mod/tests/: main.lua  tests_01.lua
src/lua/simple-scenario/: README.md  control.lua  info.json
src/lua/simple-scenario/scenario_scripts/: thing.lua
src/lua/simple-scenario/tests/: main.lua
src/python/factorio_check/: pyproject.toml
src/python/factorio_check/factorio_check/: factorio_controller.py  packaging.py
src/python/factorio_check/factorio_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
