[project]
name = "factorio_check"
description="A library for helping with factorio testing"
requires-python = ">=3.8"
authors = [{name = "Danny Farrell", email = "danpf@uw.edu"}]
version = "1.0.0"
dependencies = []

[project.scripts]
package-addons = "factorio_check.packaging:main_cli"
run-factorio-test = "factorio_check.factorio_controller:main_cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
